Fix: Corrected cod to reflect changes to layout, making logout-wrapper get displayed properly when using the footer icon. Style: Add cursor: pointer to both buttons in the logout-wrapper. Add 1rem margin-top to Aside to better align with the other elements. Code cleanup of several redundant lines

--- a/frontend/src/styles/footer.css
+++ b/frontend/src/styles/footer.css
@@ -13,7 +13,10 @@ footer {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: 0.15s ease-in;
+  transition: 0.1s ease-in;
+  position: absolute;
+  top: -310px;
+  left: 12px;
 }
 
 .profileinfo-wrapper {
@@ -75,6 +78,6 @@ footer {
 
 .popup {
   position: absolute;
-  top: -260px;
-  right: 0;
-  }
+  top: -310px;
+  left: 12px;
+}
