--- a/frontend/src/styles/layout.css
+++ b/frontend/src/styles/layout.css
@@ -27,6 +27,7 @@
 }
 
 .layout-aside {
+  margin-top: 1rem;
   width: 350px;
   position: sticky;
   top: 0;
