--- a/frontend/src/styles/logoutPopup.css
+++ b/frontend/src/styles/logoutPopup.css
@@ -7,10 +7,8 @@
     border: 1px solid rgb(0, 0, 0, 0.3);
     padding: 1rem;
     border-radius: 24px;
-    position: absolute;
-    top: -260px;
-    left: 170px;
-    }
+    position: relative;
+     }
 
 .logout-wrapper img {
     height: 100%;
@@ -30,12 +28,20 @@
     padding: 8px;
 }
 
+.logout-btn:hover {
+   cursor: pointer;
+}
+
 .cancel-btn {
     border-radius: 24px;
     background-color: #ffffff;
     color: #000000;
     padding: 8px;
-    border: 1px solid #000000;
+    border: 1px solid #000000
+}
+
+.cancel-btn:hover {
+   cursor: pointer;
 }
 
 .logo-container {
@@ -47,3 +53,8 @@
     display: flex;
     flex-direction: column;
 }
+
+.logout-wrapper h3 {
+    margin: 0;
+    text-align: center;
+    }
